--- a/styles.css
+++ b/styles.css
@@ -237,11 +237,18 @@ footer {
 .cat-box h3 {
     font-size: 1.2em;
     margin: 10px 0 5px;
+    font-family: "Yatra One", system-ui;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .cat-box p {
     font-size: 0.9em;
     color: #666;
+      font-family: "Lexend Deca", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
 }
 #dogs {
     text-align: center;
