--- a/styles.css
+++ b/styles.css
@@ -245,7 +245,7 @@ footer {
 
 .cat-box p {
     font-size: 0.9em;
-    color: #666;
+    color: #404C8A;
       font-family: "Lexend Deca", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
