--- a/styles.css
+++ b/styles.css
@@ -201,7 +201,7 @@ footer {
 }
 
 #cats p {
-    font-size: 1.2em;
+    font-size: .8em;
     margin-bottom: 20px;
 }
 
@@ -244,7 +244,7 @@ footer {
 }
 
 .cat-box p {
-    font-size: 0.9em;
+    font-size: 0.6em;
     color: #404C8A;
       font-family: "Lexend Deca", sans-serif;
   font-optical-sizing: auto;
@@ -268,7 +268,7 @@ footer {
 }
 
 #dogs p {
-    font-size: 1.2em;
+    font-size: .8em;
     margin-bottom: 20px;
      color: #404C8A;
       font-family: "Lexend Deca", sans-serif;
