--- a/styles.css
+++ b/styles.css
@@ -328,16 +328,16 @@ footer {
 #other h2 {
     font-size: 2em;
     margin-bottom: 10px;
-     font-family: "Lexend Deca", sans-serif;
+      font-family: "Lexend Deca", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
 }
 
 #other p {
-    font-size: 1.2em;
+    font-size: .8em;
     margin-bottom: 20px;
-      color: #404C8A;
+     color: #404C8A;
       font-family: "Lexend Deca", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
@@ -374,7 +374,7 @@ footer {
 }
 
 .other-box h3 {
-       font-size: 1.2em;
+    font-size: 1.2em;
     margin: 10px 0 5px;
 }
 
