--- a/styles.css
+++ b/styles.css
@@ -563,3 +563,9 @@ table tr {
     text-align: center;
     font-family: "Lexend Deca", sans-serif;
 }
+#missonstatment{
+     color: #333;
+    font-size: 0.9em;
+    text-align: center;
+    font-family: "Lexend Deca", sans-serif;
+}
