--- a/styles.css
+++ b/styles.css
@@ -201,21 +201,17 @@ footer {
 }
 
 #cats p {
-    font-size: .8em;
+    font-size: 1.2em;
     margin-bottom: 20px;
-        color: #404C8A;
-      font-family: "Lexend Deca", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;
 }
 
 .cat-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3 boxes per row */
-    gap: 20px;
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 20px; 
     justify-content: center;
-    align-items: center;
+    align-items: start; 
+    position: relative; 
 }
 
 .cat-box {
@@ -224,11 +220,14 @@ footer {
     padding: 15px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
     text-align: center;
+    position: relative; 
     transition: transform 0.3s ease; 
+    z-index: 0; 
 }
 
 .cat-box:hover {
     transform: scale(1.05); 
+    z-index: 10; 
 }
 
 .cat-box img {
@@ -242,19 +241,41 @@ footer {
 .cat-box h3 {
     font-size: 1.2em;
     margin: 10px 0 5px;
-   font-family: "Lexend Deca", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;
+    font-family: "Yatra One", system-ui;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .cat-box p {
-    font-size: 0.6em;
-    color: #404C8A;
-      font-family: "Lexend Deca", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;
+    font-size: 0.9em;
+    color: #666;
+    font-family: "Lexend Deca", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+}
+
+
+.cat-details {
+    background-color: #f9f9f9;
+    border-top: 1px solid #ddd;
+    padding: 10px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -110px; 
+    width: 90%; 
+    opacity: 0; 
+    visibility: hidden; 
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+}
+
+.cat-box:hover .cat-details {
+    opacity: 1; 
+    visibility: visible;
 }
 
 #dogs {
