--- a/styles.css
+++ b/styles.css
@@ -201,8 +201,13 @@ footer {
 }
 
 #cats p {
-    font-size: 1.2em;
+    font-size: .8em;
     margin-bottom: 20px;
+     color: #404C8A;
+      font-family: "Lexend Deca", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
 }
 
 .cat-grid {
