--- a/styles.css
+++ b/styles.css
@@ -428,6 +428,27 @@ footer {
 .other-box p {
     font-size: 0.9em;
 }
+.other-details {
+    background-color: #f9f9f9;
+    border-top: 1px solid #ddd;
+    padding: 10px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -110px; 
+    width: 90%; 
+    opacity: 0; 
+    visibility: hidden; 
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+}
+
+.other-box:hover .other-details {
+    opacity: 1; 
+    visibility: visible;
+}
 #contact {
     margin: 20px;
     font-family: "Ubuntu Mono", serif;
