--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -707,4 +706,114 @@ ol li {
     height: 200px;
     border-radius: 10px; 
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+}
+#classes {
+    padding: 50px 20px;
+    background-color: #f8f8f8;
+}
+
+.classes-title h2 {
+    color: #404C8A;
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+
+.classes-title p {
+    font-size: 1.2em;
+    color: #555;
+    margin-bottom: 40px; 
+    font-family: "Lexend Deca", sans-serif; /* Font added here */
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+}
+
+.class-container {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+
+.class-box {
+    background-color: #ffffff;
+    border-radius: 15px;
+    padding: 15px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    text-align: center;
+    position: relative;
+    width: 100%;
+    max-width: 600px;
+    margin-bottom: 40px; 
+    font-family: "Lexend Deca", sans-serif; 
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+}
+
+.class-info h3 {
+    color: #404C8A;
+    font-family: "Lexend Deca", sans-serif; 
+    font-weight: 500;
+}
+
+
+.learn-more {
+    position: relative;
+}
+
+.learn-more .cta {
+    display: inline-block;
+    background-color: #404C8A;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 10px;
+    transition: background-color 0.3s ease;
+}
+
+.learn-more .cta:hover {
+    background-color: #2C3E8B;
+}
+
+.learn-more .dropdown-content {
+    display: none;
+    background-color: #f9f9f9;
+    padding: 15px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    position: absolute;
+    top: 50px;  
+    left: 0;   
+    width: 100%;  */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    font-family: "Lexend Deca", sans-serif; 
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+}
+
+.learn-more:hover .dropdown-content {
+    display: block;
+}
+
+.learn-more .dropdown-content ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.learn-more .dropdown-content ul li {
+    margin-bottom: 8px;
+    font-size: 1em;
+    color: #333;
+}
+
+.more-info {
+    margin-top: 40px;
+    text-align: center;
+    font-size: 1.2em;
+    color: #404C8A;
+    font-family: "Lexend Deca", sans-serif; 
 }
