--- a/styles.css
+++ b/styles.css
@@ -720,7 +720,7 @@ ol li {
 
 .classes-title p {
     font-size: 1em;
-    color: #0a0a0a;
+    color: #333;
     margin-bottom: 40px; 
     font-family: "Lexend Deca", sans-serif;
     font-optical-sizing: auto;
