--- a/styles.css
+++ b/styles.css
@@ -793,6 +793,7 @@ ol li {
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
+    z-index: 999;
 }
 
 .learn-more:hover .dropdown-content {
