--- a/styles.css
+++ b/styles.css
@@ -733,6 +733,8 @@ ol li {
     gap: 20px;
     justify-content: center;
     flex-wrap: wrap;
+    position: relative; 
+    z-index: 0;
 }
 
 
@@ -750,6 +752,7 @@ ol li {
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
+    z-index: 0; 
 }
 
 .class-info h3 {
@@ -761,6 +764,7 @@ ol li {
 
 .learn-more {
     position: relative;
+    z-index: 1; 
 }
 
 .learn-more .cta {
@@ -793,7 +797,7 @@ ol li {
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
-    z-index: 999;
+    z-index: 10;
 }
 
 .learn-more:hover .dropdown-content {
